--- a/css/juego2.css
+++ b/css/juego2.css
@@ -15,13 +15,20 @@
       position: relative;
     }
 
-    /* Elementos de fondo animados */
-    .bg-shapes {
+    .arrow {
       position: absolute;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      z-index: 0;
+      width: 200px;
+      left: 0;
+      top: -20px;
+      rotate: 90deg;
+    }
+
+    .arrow .arrow-overlay {
+      position: absolute;
+      inset: 0;
+      z-index: 9999;
+      background: transparent;
+      cursor: pointer;
     }
 
     .shape {
@@ -232,10 +239,19 @@
     /* Controles */
     .controls {
       display: flex;
+      width: 300px;
       gap: 18px;
       justify-content: center;
       margin-bottom: 30px;
-      flex-wrap: wrap;
+      flex-wrap: column;
+      flex-direction: column;
+    }
+
+    .cat {
+      position: absolute;
+      height: 300px;
+      margin-top: -200px;
+      margin-left: 650px;
     }
 
     .btn {
